Kubernetes/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
spec:
  containers:
    - name: updater
      image: landrzejewski/updater:v2
      #args:
      #  - '10'

#      env:
#        - name: INTERVAL
#          #value: '10'
#          valueFrom:
#            configMapKeyRef:
#              name: updater-config-map
#              key: INTERVAL

      volumeMounts:
          - name: config
            mountPath: /config
          - name: swap
            mountPath: /var/htdocs
    - name: www
      image: nginx:1.25-alpine
      ports:
        - containerPort: 80
          name: http
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: swap
  volumes:
    - name: config
      configMap:
        name: updater-config-map
    - name: swap
      persistentVolumeClaim:
        claimName: updater-pvc
      #emptyDir:
      #  medium: Memory
