Kubernetes/echo-server-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: echo-server-service
spec:
  selector:
    app-name: echo-server
  #clusterIP:  172.16.166.120
  ports:
    - port: 80
      targetPort: 8080
