Kubernetes/echo-server-service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: echo-server-service
spec:
  type: NodePort
  selector:
    app-name: echo-server
  #clusterIP:  172.16.166.120
  #externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
