Kubernetes/sqrt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqrt-deployment
  namespace: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: sqrt
  template:
    metadata:
      namespace: training
      labels:
        app-name: sqrt
    spec:
      containers:
        - name: sqrt
          image: registry.k8s.io/hpa-example
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 220m
            limits:
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: sqrt-service
  namespace: training
spec:
  selector:
    app-name: sqrt
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
